--- a/documentation/src/theme/DocItem/Layout/styles.module.css
+++ b/documentation/src/theme/DocItem/Layout/styles.module.css
@@ -3,8 +3,8 @@
   margin-top: 0;
 }
 
-@media (min-width: 997px) {
+/* @media (min-width: 997px) {
   .docItemCol {
     max-width: 75% !important;
   }
-}
+} */
