--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -1088,6 +1088,7 @@ background: var(--ifm-menu-link-sublist-icon) 50% / 1.25rem 1.25rem;
     @apply appearance-none no-underline text-xs font-bold bg-slate-800 text-white;
     font-size: 12px;
     line-height: 13px;
+    height: 22px;
     padding-top: 4px;
     padding-bottom: 5px;
     vertical-align: middle;
